cluster/apps/wazuh-system/wazuh-dashboard/deployment.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Dashboard Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-dashboard
  namespace: wazuh-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-dashboard
  template:
    metadata:
      labels:
        app: wazuh-dashboard
      name: wazuh-dashboard
    spec:
      volumes:
        - name: config
          configMap:
            name: wazuh-dashboard-configmap
        - name: ca-cert
          secret:
            secretName: wazuh-pki-ca
      containers:
        - name: wazuh-dashboard
          image: 'wazuh/wazuh-dashboard:4.9.0'
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /usr/share/wazuh-dashboard/config/opensearch_dashboards.yml
              subPath: opensearch_dashboards.yml
              readOnly: false
            - name: ca-cert
              mountPath: /usr/share/wazuh-dashboard/certs/ca.crt
              subPath: ca.crt
              readOnly: true
          ports:
            - containerPort: 5601
              name: dashboard
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
